--- a/.sanity-template/manifest.json
+++ b/.sanity-template/manifest.json
@@ -4,7 +4,7 @@
   "description": "Minimal and barebones example of a starter for deployment on Vercel with Gatsby",
   "previewMedia": {
     "type": "image",
-    "src": "assets/frontend.png",
+    "src": "./assets/frontend.png",
     "alt": "Gatsby frontend with Sanity data displaying"
   },
   "technologies": [
