--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "name": "gw-gatsby-sanity-base",
   "version": "1.0.4",
   "scripts": {
-    "build": "lerna run build --parallel",
-    "dev": "lerna run dev --parallel",
+    "build": "sanity-template build --template-values .sanity-template/template-values.json && cd studio && npm run graphql-deploy",
+    "dev": "sanity-template watch --template-values .sanity-template/template-values.json",
     "start": "lerna run dev --parallel",
     "format": "lerna run format",
-    "build-studio": "lerna bootstrap && (cd studio && npm run build)",
-    "build-web": "lerna bootstrap && (cd studio && SANITY_AUTH_TOKEN=$SANITY_DEPLOY_STUDIO_TOKEN npm run graphql-deploy) && (cd web && npm run build)",
     "graphql-deploy": "lerna run graphql-deploy",
     "lint": "lerna run lint",
     "postinstall": "lerna bootstrap",
@@ -16,7 +14,8 @@
   },
   "devDependencies": {
     "@sanity/cli": "^2.10.5",
-    "lerna": "^3.22.1"
+    "lerna": "^3.22.1",
+    "sanity-template": "^2.4.3"
   },
   "dependencies": {
     "@sanity/production-preview": "^2.2.6"
