--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,7 @@
     "gatsby-source-filesystem": "^3.8.0",
     "gatsby-source-sanity": "^7.0.7",
     "gatsby-transformer-sharp": "^3.8.0",
+    "path-browserify": "^1.0.1",
     "polished": "^4.1.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
