change vercel file

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,4 @@
 {
+	"builds": [{"config": { "distDir": "dist" }}],
 	"rewrites": [{ "source": "/studio/(.*)", "destination": "/studio/index.html" }]
 }
