--- a/studio/package.json
+++ b/studio/package.json
@@ -8,7 +8,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "start": "sanity start",
-    "build": "sanity build --output public"
+    "build": "sanity build"
   },
   "keywords": [
     "sanity"
