--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "gatsby develop",
-    "build": "npm run build:sanity && npm run build:web",
-    "build:web": "cd web && gatsby build",
-    "start:web": "cd web && gatsby start",
+    "build": "npm run build:sanity",
     "build:sanity": "cd studio && npx sanity build ../public/studio -y && cd ..",
     "start:sanity": "cp .env.local ./studio/.env.development && cd studio && sanity start",
     "postinstall": "lerna bootstrap"
