--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "npm run build:sanity",
-    "build:sanity": "cd studio && npx sanity build ../public/studio -y && cd ..",
+    "build:sanity": "cd studio && npx sanity build public ../public/studio -y && cd ..",
     "start:sanity": "cp .env.local ./studio/.env.development && cd studio && sanity start",
     "postinstall": "lerna bootstrap"
   },
