--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run build:sanity",
+    "dev": "npm run start:sanity && npm run start:gatsby",
     "build": "npm run build:sanity",
     "build:sanity": "cd studio && npx sanity build public ../public/studio -y && cd ..",
     "start:sanity": "cp .env.local ./studio/.env.development && cd studio && sanity start",
+    "build:gatsby": "cd web && gatsby build",
+    "start:gatsby": "cd web && gatsby develop",
     "postinstall": "lerna bootstrap"
   },
   "dependencies": {
