update vercel file

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
-	"builds": [{"config": { "distDir": "studio" }}],
+	"builds": [
+		{"config": { "distDir": "studio", "use": "@vercel/node" }},
+		{ "src": "*.html", "use": "@vercel/static" },
+    { "src": "*.py", "use": "@vercel/python" },
+    { "src": "*.js", "use": "@vercel/node" }
+	],
 	"rewrites": [{ "source": "/studio/(.*)", "destination": "/studio/index.html" }]
 }
