--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
 {
 	"builds": [
-		{"config": { "distDir": "studio", "use": "@vercel/node" }},
-		{ "src": "*.html", "use": "@vercel/static" },
-    { "src": "*.py", "use": "@vercel/python" },
-    { "src": "*.js", "use": "@vercel/node" }
+		{ "use": "@vercel/node" },
+		{ "config": { "distDir": "studio" }}
 	],
 	"rewrites": [{ "source": "/studio/(.*)", "destination": "/studio/index.html" }]
 }
