--- a/package.json
+++ b/package.json
@@ -3,16 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run start:sanity && npm run start:gatsby",
     "build": "npm run build:sanity",
-    "build:sanity": "cd studio && npx sanity build public ../public/studio -y && cd ..",
+    "build:sanity": "cd studio && npx sanity build ../public/studio -y",
     "start:sanity": "cp .env.local ./studio/.env.development && cd studio && sanity start",
     "build:gatsby": "cd web && gatsby build",
     "start:gatsby": "cd web && gatsby develop",
     "postinstall": "lerna bootstrap"
   },
   "dependencies": {
-    "@sanity/cli": "^2.12.2",
     "lerna": "^3.22.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
