--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,4 @@
 {
-	"builds": [
-		{ "use": "@vercel/node" },
-		{ "config": { "distDir": "studio" }, "use": "@vercel/node" }
-	],
-	"rewrites": [{ "source": "/studio/(.*)", "destination": "/studio/index.html" }]
+  "trailingSlash":false,
+  "rewrites": [{ "source": "/studio/(.*)", "destination": "/studio/index.html" }]
 }
