--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "lerna bootstrap"
   },
   "dependencies": {
+    "@sanity/cli": "^2.12.2",
     "lerna": "^3.22.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
