switch vercel file back

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
-  "trailingSlash":false,
-  "rewrites": [{ "source": "/studio/(.*)", "destination": "/studio/index.html" }]
+	"builds": [
+		{ "use": "@vercel/node" },
+		{ "config": { "distDir": "studio" }, "use": "@vercel/node" }
+	],
+	"rewrites": [{ "source": "/studio/(.*)", "destination": "/studio/index.html" }]
 }
