move build location

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "npm run build:sanity",
-    "build:sanity": "cd studio && npx sanity build ../public/studio -y",
+    "build:sanity": "cd studio && npx sanity build ../public -y",
     "start:sanity": "cp .env.local ./studio/.env.development && cd studio && sanity start",
     "build:gatsby": "cd web && gatsby build",
     "start:gatsby": "cd web && gatsby develop",
