start hooking up blocks to sanity

--- a/studio/package.json
+++ b/studio/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0",
     "react-dom": "^17.0",
     "react-icons": "^4.2.0",
+    "sanity-plugin-conditional-field": "^1.0.0",
     "sanity-plugin-tabs": "^2.0.1"
   }
 }
