--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,7 @@
     "gatsby-source-filesystem": "^3.8.0",
     "gatsby-source-sanity": "^7.0.7",
     "gatsby-transformer-sharp": "^3.8.0",
+    "intersection-observer": "^0.12.0",
     "path-browserify": "^1.0.1",
     "polished": "^4.1.3",
     "react": "^17.0.1",
@@ -43,7 +44,9 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.32.0",
-    "react-spinner-material": "^1.3.1"
+    "react-player": "^2.9.0",
+    "react-spinner-material": "^1.3.1",
+    "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
     "plop": "^2.7.4"
