--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "@sanity/block-content-to-react": "^3.0.0",
     "dotenv": "^8.6.0",
     "gatsby": "^3.6.2",
+    "gatsby-plugin-breakpoints": "^1.3.3",
     "gatsby-plugin-emotion": "^6.8.0",
     "gatsby-plugin-env-variables": "^2.1.0",
     "gatsby-plugin-gatsby-cloud": "^2.8.1",
@@ -28,6 +29,7 @@
     "gatsby-plugin-layout": "^2.8.0",
     "gatsby-plugin-manifest": "^3.8.0",
     "gatsby-plugin-react-helmet": "^4.8.0",
+    "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-root-import": "^2.0.6",
     "gatsby-plugin-sharp": "^3.8.0",
     "gatsby-plugin-sitemap": "^4.4.0",
