--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "postinstall": "lerna bootstrap"
   },
   "dependencies": {
-    "@sanity/cli": "^2.12.2",
-    "lerna": "^3.22.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "@sanity/cli": "^2.17.1",
+    "lerna": "^4.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-json-pretty": "^2.2.0"
   }
 }
