--- a/studio/package.json
+++ b/studio/package.json
@@ -14,19 +14,19 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.15.1",
+    "@sanity/base": "^2.17.0",
     "@sanity/components": "^2.14.0",
-    "@sanity/core": "^2.15.0",
-    "@sanity/default-layout": "^2.15.1",
-    "@sanity/default-login": "^2.15.0",
-    "@sanity/desk-tool": "^2.15.2",
+    "@sanity/core": "^2.17.1",
+    "@sanity/default-layout": "^2.17.1",
+    "@sanity/default-login": "^2.17.1",
+    "@sanity/desk-tool": "^2.17.1",
     "@sanity/vision": "^2.15.0",
     "a11y-react-emoji": "^1.1.3",
+    "get-youtube-id": "^1.0.1",
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
     "react-icons": "^4.2.0",
-    "sanity-plugin-conditional-field": "^1.0.0",
     "sanity-plugin-tabs": "^2.0.1"
   }
 }
