--- a/web/package.json
+++ b/web/package.json
@@ -23,12 +23,13 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@sanity/block-content-to-react": "^3.0.0",
-    "dotenv": "^8.6.0",
+    "depcheck": "^1.4.2",
+    "dotenv": "^10.0.0",
     "gatsby": "^3.6.2",
     "gatsby-plugin-breakpoints": "^1.3.3",
     "gatsby-plugin-emotion": "^6.8.0",
     "gatsby-plugin-env-variables": "^2.1.0",
-    "gatsby-plugin-gatsby-cloud": "^2.8.1",
+    "gatsby-plugin-gatsby-cloud": "^3.0.0",
     "gatsby-plugin-google-analytics": "^3.8.0",
     "gatsby-plugin-image": "^1.8.0",
     "gatsby-plugin-layout": "^2.8.0",
@@ -42,6 +43,7 @@
     "gatsby-source-sanity": "^7.0.7",
     "gatsby-transformer-sharp": "^3.8.0",
     "intersection-observer": "^0.12.0",
+    "npx": "^10.2.2",
     "path-browserify": "^1.0.1",
     "polished": "^4.1.3",
     "react": "^17.0.1",
@@ -65,11 +67,11 @@
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-webpack-plugin": "^2.5.4",
+    "eslint-webpack-plugin": "^3.0.1",
     "gatsby-plugin-eslint": "^4.0.0",
     "plop": "^2.7.4",
     "prettier-eslint-cli": "^5.0.1"
