update template manifest

--- a/.sanity-template/manifest.json
+++ b/.sanity-template/manifest.json
@@ -15,7 +15,7 @@
     }
   ],
   "deployment": {
-    "provider": "gatsby",
+    "provider": "vercel",
     "sites": [
       {
         "id": "web",
