--- a/.sanity-template/manifest.json
+++ b/.sanity-template/manifest.json
@@ -9,12 +9,17 @@
   },
   "technologies": [
     {
+      "id": "vercel",
+      "name": "Vercel",
+      "url": "https://vercel.com/"
+    },
+    {
       "id": "gatsbyjs",
       "name": "Gatsby",
       "url": "https://gatsbyjs.com"
     }
   ],
   "deployment": {
-    "provider": "netlify"
+    "provider": "vercel"
   }
 }
