add back in git ignore envars

--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,8 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-# .env.development
-# .env.production
+.env.development
+.env.production
 
 # vercel
 .vercel
