--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@sanity/cli": "^2.17.1",
+    "gatsby-plugin-google-gtag": "^3.13.0",
     "lerna": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
