--- a/studio/package.json
+++ b/studio/package.json
@@ -14,19 +14,21 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.18.0",
+    "@sanity/base": "^2.20.0",
     "@sanity/components": "^2.14.0",
-    "@sanity/core": "^2.18.0",
-    "@sanity/default-layout": "^2.18.0",
-    "@sanity/default-login": "^2.18.0",
-    "@sanity/desk-tool": "^2.18.0",
-    "@sanity/vision": "^2.17.2",
+    "@sanity/core": "^2.20.0",
+    "@sanity/default-layout": "^2.20.0",
+    "@sanity/default-login": "^2.19.0",
+    "@sanity/desk-tool": "^2.20.0",
+    "@sanity/vision": "^2.20.0",
     "a11y-react-emoji": "^1.1.3",
     "get-youtube-id": "^1.0.1",
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
     "react-icons": "^4.2.0",
-    "sanity-plugin-tabs": "^2.0.1"
+    "sanity-plugin-color-list": "^2.0.2",
+    "sanity-plugin-tabs": "^2.0.1",
+    "styled-components": "^5.3.1"
   }
 }
