--- a/web/package.json
+++ b/web/package.json
@@ -23,27 +23,24 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@sanity/block-content-to-react": "^3.0.0",
-    "depcheck": "^1.4.2",
     "dotenv": "^10.0.0",
-    "gatsby": "^3.6.2",
-    "gatsby-plugin-breakpoints": "^1.3.3",
-    "gatsby-plugin-emotion": "^6.8.0",
+    "gatsby": "^3.14.0",
+    "gatsby-plugin-breakpoints": "^1.3.5",
+    "gatsby-plugin-emotion": "^6.14.0",
     "gatsby-plugin-env-variables": "^2.1.0",
-    "gatsby-plugin-gatsby-cloud": "^3.0.0",
-    "gatsby-plugin-google-analytics": "^3.8.0",
-    "gatsby-plugin-image": "^1.8.0",
-    "gatsby-plugin-layout": "^2.8.0",
-    "gatsby-plugin-manifest": "^3.8.0",
-    "gatsby-plugin-react-helmet": "^4.8.0",
+    "gatsby-plugin-gatsby-cloud": "^3.2.0",
+    "gatsby-plugin-google-gtag": "^3.14.0",
+    "gatsby-plugin-image": "^1.14.0",
+    "gatsby-plugin-layout": "^2.14.0",
+    "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-root-import": "^2.0.6",
-    "gatsby-plugin-sharp": "^3.8.0",
-    "gatsby-plugin-sitemap": "^4.4.0",
-    "gatsby-source-filesystem": "^3.8.0",
+    "gatsby-plugin-sharp": "^3.14.0",
+    "gatsby-plugin-sitemap": "^4.10.0",
+    "gatsby-source-filesystem": "^3.14.0",
     "gatsby-source-sanity": "^7.0.7",
-    "gatsby-transformer-sharp": "^3.8.0",
-    "intersection-observer": "^0.12.0",
-    "npx": "^10.2.2",
+    "gatsby-transformer-sharp": "^3.14.0",
     "path-browserify": "^1.0.1",
     "polished": "^4.1.3",
     "react": "^17.0.1",
@@ -58,21 +55,16 @@
     "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/eslint-parser": "^7.15.0",
-    "@babel/plugin-syntax-jsx": "^7.14.5",
+    "@babel/core": "^7.15.5",
+    "@emotion/eslint-plugin": "^11.2.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-webpack-plugin": "^3.0.1",
-    "gatsby-plugin-eslint": "^4.0.0",
     "plop": "^2.7.4",
     "prettier-eslint-cli": "^5.0.1"
   }
