--- a/web/package.json
+++ b/web/package.json
@@ -51,6 +51,7 @@
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.32.0",
     "react-player": "^2.9.0",
+    "react-sizes": "^2.0.0",
     "react-spinner-material": "^1.3.1",
     "react-transition-group": "^4.4.2"
   },
