--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "@sanity/cli": "^2.17.1",
+    "gatsby": "^4.4.0",
+    "gatsby-plugin-gatsby-cloud": "^4.4.0",
     "gatsby-plugin-google-gtag": "^3.13.0",
+    "gatsby-source-sanity": "^7.3.2",
     "lerna": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
