--- a/studio/package.json
+++ b/studio/package.json
@@ -14,13 +14,14 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.21.4",
+    "@sanity/base": "^2.23.3",
     "@sanity/components": "^2.14.0",
-    "@sanity/core": "^2.21.4",
-    "@sanity/default-layout": "^2.21.4",
-    "@sanity/default-login": "^2.21.4",
-    "@sanity/desk-tool": "^2.21.4",
-    "@sanity/vision": "^2.21.4",
+    "@sanity/core": "^2.23.2",
+    "@sanity/default-layout": "^2.23.3",
+    "@sanity/default-login": "^2.23.2",
+    "@sanity/desk-tool": "^2.23.3",
+    "@sanity/production-preview": "^2.15.0",
+    "@sanity/vision": "^2.23.3",
     "a11y-react-emoji": "^1.1.3",
     "get-youtube-id": "^1.0.1",
     "prop-types": "^15.7",
