--- a/web/package.json
+++ b/web/package.json
@@ -20,29 +20,29 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "dependencies": {
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@sanity/block-content-to-react": "^3.0.0",
-    "dotenv": "^10.0.0",
-    "gatsby": "^4.4.0",
+    "dotenv": "^14.3.2",
+    "gatsby": "^4.16.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
-    "gatsby-plugin-emotion": "^7.4.0",
-    "gatsby-plugin-gatsby-cloud": "^4.4.0",
-    "gatsby-plugin-google-gtag": "^4.4.0",
-    "gatsby-plugin-image": "^2.4.0",
-    "gatsby-plugin-layout": "^3.4.0",
-    "gatsby-plugin-manifest": "^4.4.0",
-    "gatsby-plugin-react-helmet": "^5.4.0",
+    "gatsby-plugin-emotion": "^7.6.0",
+    "gatsby-plugin-gatsby-cloud": "^4.6.0",
+    "gatsby-plugin-google-gtag": "^4.6.0",
+    "gatsby-plugin-image": "^2.6.0",
+    "gatsby-plugin-layout": "^3.6.0",
+    "gatsby-plugin-manifest": "^4.6.0",
+    "gatsby-plugin-react-helmet": "^5.6.0",
     "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-remove-console": "^0.0.2",
     "gatsby-plugin-root-import": "^2.0.8",
-    "gatsby-plugin-sharp": "^4.4.0",
-    "gatsby-plugin-sitemap": "^5.4.0",
-    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-plugin-sharp": "^4.6.0",
+    "gatsby-plugin-sitemap": "^5.6.0",
+    "gatsby-source-filesystem": "^4.6.0",
     "gatsby-source-sanity": "^7.3.2",
-    "gatsby-transformer-sharp": "^4.4.0",
+    "gatsby-transformer-sharp": "^4.6.0",
     "path-browserify": "^1.0.1",
-    "polished": "^4.1.3",
+    "polished": "^4.1.4",
     "react": "^17.0.1",
     "react-animate-height": "^2.0.23",
     "react-div-100vh": "^0.7.0",
@@ -50,21 +50,25 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
+    "react-onclickoutside": "^6.12.1",
     "react-player": "^2.9.0",
     "react-sizes": "^2.0.0",
     "react-spinner-material": "^1.3.1",
     "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@emotion/eslint-plugin": "^11.2.0",
-    "babel-eslint": "^10.1.0",
+    "@babel/core": "^7.16.12",
+    "@babel/eslint-parser": "^7.16.5",
+    "@emotion/babel-plugin": "^11.7.2",
+    "@emotion/eslint-plugin": "^11.7.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "eslint": "^7.32.0",
+    "babel-preset-gatsby": "^2.6.0",
+    "eslint": "^8.8.0",
     "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-emotion": "^11.0.0",
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-standard": "^5.0.0",
     "plop": "^3.0.5",
